--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "npx prettier . --write"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.11.5",
     "prettier": "^3.3.3",
